# hexgeo

./: Cargo.toml  flake.nix
app/: Cargo.toml
app/src/: app.rs  axext.rs  gameboard.rs  lib.rs  options.rs  run.rs  widgets.rs
demo/: Cargo.toml
demo/src/: ext.rs  main.rs  select_menu.rs
egui/: Cargo.toml
egui/src/: ext.rs  hexui.rs  hexwidget.rs  lib.rs  projector.rs  wireframe.rs
githooks/: README.md  pre-commit
hex-widget/: Cargo.toml
hexgeo/: Cargo.toml
hexgeo/src/: axials.rs  board.rs  geom.rs  lib.rs  radial.rs
hexgeo/src/geom/: orientation.rs  overview.md  pt.rs
hexgeo/src/radial/: board.rs  rim.rs
hexohexes/: Cargo.toml
hexohexes-egui/src/: ext.rs  orientation.rs
hexohexes/src/: axials.rs  board.rs  bounds.rs  geom.rs  lib.rs
hexohexes/src/geom/: orientation.rs
hoh-egui/: Cargo.toml
hoh-egui/src/: boardframe.rs  lib.rs  projector.rs
