[workspace]
members = ["app", "hexohexes", "hoh-egui", "demo"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
hexohexes = { path = "hexohexes" }
hexohexes-egui = { path = "hoh-egui" }

clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
derive-new = "0.7.0"
derive_more = "2.1.1"
eframe = "0.33"
egui = "0.33"
env_logger = "0.11.8"
extension-traits = "2.0.1"
log = "0.4.29"
logging-options = "0.1.0"
