[workspace]
members = ["hexgeo", "egui", "demo"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
hexgeo = { path = "hexgeo" }
hexgeo-egui = { path = "egui" }
derive-new = "0.7.0"
derive_more = "2.1.1"
eframe = "0.33"
egui = "0.33"
emath = "0.33"
extension-traits = "2.0.1"
