[package]
name = "modmad"
version = "0.1.0"
edition.workspace = true

[dependencies]
clap.workspace = true
color-eyre.workspace = true
derive-new.workspace = true
eframe.workspace = true
env_logger.workspace = true
hexohexes.workspace = true
hexohexes-egui.workspace = true
log.workspace = true
logging-options.workspace = true

[lib]
test = false
doctest = false
